# reserve-auditor

./: .gitignore  .gitmodules  BUILD.md  CLA.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.frontend  LICENSE  README.md  example.gnosis-safe.toml  gnosis-safe.json  goerli.gnosis-safe.json  mainnet.gnosis-safe.json  rinkeby.gnosis-safe.json  testnet.gnosis-safe.json
.cargo/: config
.github/actions/lint/: action.yml
.github/actions/setup-rust/: action.yml
.github/workflows/: CI.yml  build-deploy-staging.yaml  deploy.yaml  dispatch-deploy.yaml  release.yaml  tag.yaml
.internal-ci/charts/reserve-auditor/: mainnet-values.yaml  testnet-values.yaml  values.yaml
.internal-ci/charts/reserve-auditor/templates/: NOTES.txt  _helpers.tpl  api-service.yaml  api-statefulset.yaml  deployment.yaml  frontend-deployment.yaml  frontend-service.yaml  gnosisconfigmap.yaml  ingress.yaml  service.yaml  statefulset.yaml  supervisord-httpserver-configmap.yaml  supervisord-mobilecoind-configmap.yaml  supervisord-scanner-configmap.yaml
.internal-ci/docker/: Dockerfile.api  Dockerfile.frontend
.internal-ci/docker/entrypoints/: api.sh  frontend.sh
.internal-ci/docker/support/api/: wrapper-httpserver.sh
.internal-ci/docker/support/frontend/: main-stage.nginx.conf  main.nginx.conf  test-stage.nginx.conf  test.nginx.conf
api/: Cargo.toml
api/proto/: reserve_auditor.proto
data/test/: all-transactions.json
deploy/: Chart.yaml
deploy/charts/reserve-auditor/: values.yaml
deploy/charts/reserve-auditor/templates/: NOTES.txt  hpa.yaml  service.yaml  serviceaccount.yaml
frontend/: README.md  package.json
frontend/public/: manifest.json
frontend/src/: App.tsx  index.html  index.tsx  style.css  theme.ts
frontend/src/api/: apiHandler.ts
frontend/src/api/hooks/: useLedgerBalance.ts  useMintsAndBurns.ts  useSafeBalance.ts  useTableData.ts
frontend/src/components/: AuditDataTable.tsx  AuditedBurn.tsx  AuditedUnwrap.tsx  AuditedWrap.tsx  AuditorIntro.tsx  BalanceSummary.tsx  BottomContent.tsx  CopyableField.tsx  DataTableRow.tsx  Deposit.tsx  GnosisSafe.tsx  Header.tsx  Layout.tsx  Mint.tsx  MintsAndBurns.tsx  MobileCoinLogo.tsx  PartialUnwrap.tsx  PartialWrap.tsx  TopContent.tsx  Withdrawal.tsx  WrapTableRow.tsx
frontend/src/components/icons/: ReserveIcon.tsx  WrapMintIcon.tsx  eUSDIcon.tsx  eUSDWrapIcon.tsx  index.ts
frontend/src/components/transaction_lists/: ListConstructor.tsx  TransactionListContainer.tsx  UnwrapsList.tsx  WrapsList.tsx
frontend/src/contexts/: GnosisSafeContextProvider.tsx  index.ts
frontend/src/layout/: AuditList.tsx  Balances.tsx  Header.tsx  Layout.tsx
frontend/src/types/: api.ts  burn.ts  gnosisSafeConfig.ts  index.ts  mint.ts
frontend/src/utils/: ercTokens.tsx  isTestnet.ts  mcNetworkTokens.ts  truncate.ts  useThrottle.ts
frontend/webpack/: webpack.common.js  webpack.local-test.js  webpack.local.js  webpack.mainnet.js  webpack.staging-main.js  webpack.staging-test.js  webpack.testnet.js
frontend_v1/: package.json
frontend_v1/src/api/: apiHandler.ts
frontend_v1/src/components/: AuditedMint.tsx  Burn.tsx  Deposit.tsx  LedgerBalance.tsx
frontend_v1/src/layout/: AuditList.tsx  Balances.tsx  Header.tsx
frontend_v1/src/types/: api.ts  ledger.ts
frontend_v1/webpack/: webpack.common.js  webpack.testnet.js
migrations/2022-05-24-214504_create_initial/: up.sql
scripts/: get-mainnet-consensus-css.sh  get-testnet-consensus-css.sh  mobilecoind-mainnet.sh  mobilecoind-testnet.sh  start-http-server.sh  start-scanning-layer.sh
src/: counters.rs  error.rs  service.rs
src/convert/: counters.rs  gnosis_safe_deposit.rs  gnosis_safe_withdrawal.rs
src/db/: mod.rs  schema.patch  schema.rs  test_utils.rs
src/db/models/: audited_burn.rs  audited_mint.rs  block_audit_data.rs  block_balance.rs  burn_tx_out.rs  counters.rs  gnosis_safe_deposit.rs  gnosis_safe_withdrawal.rs  mint_config.rs  mint_config_tx.rs  mint_tx.rs  mod.rs  sql_types.rs
src/gnosis/: api_data_types.rs  config.rs  error.rs  eth_data_types.rs  fetcher.rs  mod.rs  sync.rs  utils.rs
src/http_api/: api_types.rs  fairings.rs  mod.rs  routes.rs  service.rs
tests/: compile_proto.sh
