[package]
name = "mc-reserve-auditor"
version = "2.0.0"
authors = ["MobileCoin"]
edition = "2021"

[[bin]]
name = "mc-reserve-auditor"
path = "src/bin/main.rs"

[workspace]
members = ["api"]
exclude = ["./mobilecoin"]

[dependencies]
mc-account-keys = { path = "mobilecoin/account-keys" }
mc-api = { path = "mobilecoin/api" }
mc-blockchain-types = { path = "mobilecoin/blockchain/types" }
mc-common = { path = "mobilecoin/common", features = ["log", "loggers"] }
mc-crypto-keys = { path = "mobilecoin/crypto/keys" }
mc-crypto-multisig = { path = "mobilecoin/crypto/multisig" }
mc-ledger-db = { path = "mobilecoin/ledger/db" }
mc-reserve-auditor-api = { path = "api" }
mc-transaction-core = { path = "mobilecoin/transaction/core" }
mc-transaction-std = { path = "mobilecoin/transaction/std" }
mc-util-from-random = { path = "mobilecoin/util/from-random" }
mc-util-grpc = { path = "mobilecoin/util/grpc" }
mc-util-metrics = { path = "mobilecoin/util/metrics" }
mc-util-parse = { path = "mobilecoin/util/parse" }
mc-util-serial = { path = "mobilecoin/util/serial" }
mc-util-uri = { path = "mobilecoin/util/uri" }

chrono = { version = "0.4", features = ["serde"] }
clap = { version = "3.2", features = ["derive", "env"] }
# Override diesel dependency with our fork, to statically link SQLite.
diesel = { version = "1.4", features = ["sqlite-bundled", "r2d2", "chrono"] }
diesel_migrations = { version = "1.4", features = ["sqlite"] }
displaydoc = "0.2"
grpcio = "0.11"
hex = "0.4"
hostname = "0.3.1"
lazy_static = "1.4"
prost = { version = "0.10", default-features = false, features = [
  "prost-derive",
] }
protobuf = "2.27.1"
rayon = "1.5"
reqwest = { version = "0.11", default-features = false, features = ["blocking", "rustls-tls", "gzip", "json",] }
rocket = { version = "0.5.0-rc.2", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
serde_with = "1.13"
toml = "0.5"
url = "2.2"

[dev-dependencies]
mc-blockchain-test-utils = { path = "mobilecoin/blockchain/test-utils" }
mc-crypto-keys = { path = "mobilecoin/crypto/keys" }
mc-ledger-db = { path = "mobilecoin/ledger/db", features = ["test_utils"] }
mc-transaction-core-test-utils = { path = "mobilecoin/transaction/core/test-utils" }
mc-util-test-helper = { path = "mobilecoin/util/test-helper" }

protobuf = "2.27.1"
tempfile = "3.3"

[profile.dev]
opt-level = 0
rpath = true

[profile.release]
opt-level = 3
rpath = false
lto = false
debug-assertions = false
overflow-checks = false

[profile.mobile]
inherits = "release"
debug = false
lto = true

[profile.mobile-release]
inherits = "mobile"
codegen-units = 1

# Skip the need for LD_LIBRARY_PATH in `cargo test`
[profile.test]
rpath = true

[profile.ci]
# Build config.
inherits = "test"
# Enable some compiler optimizations.
opt-level = 2
# LLVM's Link-Time Optimization: Some, relatively quick to generate.
lto = "thin"

[patch.crates-io]
# Fork and rename to use "OG" dalek-cryptography with latest dependencies.
bulletproofs-og = { git = "https://github.com/mobilecoinfoundation/bulletproofs.git", rev = "65f8af4ca0bc1cb2fd2148c3259a0a76b155ff3e" }

# This version contains iOS build fixes
cmake = { git = "https://github.com/alexcrichton/cmake-rs", rev = "5f89f90ee5d7789832963bffdb2dcb5939e6199c" }

# Fix issues with recent nightlies, bump curve25519-dalek version
curve25519-dalek = { git = "https://github.com/mobilecoinfoundation/curve25519-dalek.git", rev = "8791722e0273762552c9a056eaccb7df6baf44d7" }
ed25519-dalek = { git = "https://github.com/mobilecoinfoundation/ed25519-dalek.git", rev = "4194e36abc75722e6fba7d552e719448fc38c51f" }

# mbedtls patched to allow certificate verification with a profile
mbedtls = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "ac6ee17a31e37311ce7f4fa0649c340e5d85258d" }
mbedtls-sys-auto = { git = "https://github.com/mobilecoinfoundation/rust-mbedtls.git", rev = "ac6ee17a31e37311ce7f4fa0649c340e5d85258d" }

# Override lmdb-rkv for a necessary bugfix (see https://github.com/mozilla/lmdb-rs/pull/80)
lmdb-rkv = { git = "https://github.com/mozilla/lmdb-rs", rev = "df1c2f5" }

# Fork and rename to use "OG" dalek-cryptography.
schnorrkel-og = { git = "https://github.com/mobilecoinfoundation/schnorrkel.git", rev = "5c98ae068ee4652d6df6463b549fbf2d5d132faa" }

# Fixes the following:
# * Allow enabling `serde/std` without also requiring `serde_cbor/std` to be enabled.
#   See: https://github.com/pyfisch/cbor/pull/198
serde_cbor = { git = "https://github.com/mobilecoinofficial/cbor", rev = "4c886a7c1d523aae1ec4aa7386f402cb2f4341b5" }

# Fix issues with recent nightlies, bump curve25519-dalek version
x25519-dalek = { git = "https://github.com/mobilecoinfoundation/x25519-dalek.git", rev = "c1966b8743d320cd07a54191475e5c0f94b2ea30" }

# Override diesel dependency with our fork, to statically link SQLite.
diesel = { git = "https://github.com/mobilecoinofficial/diesel", rev = "026f6379715d27c8be48396e5ca9059f4a263198" }
