[package]
name = "mc-reserve-auditor-api"
version = "2.0.0"
authors = ["MobileCoin"]
build = "build.rs"
edition = "2021"
links = "mc-reserve-auditor-api"

[dependencies]
mc-api = { path = "../mobilecoin/api" }
mc-util-serial = { path = "../mobilecoin/util/serial" }
mc-util-uri = { path = "../mobilecoin/util/uri" }

futures = "0.3"
grpcio = "0.10.3"
protobuf = "2.27.1"

[build-dependencies]
mc-util-build-grpc = { path = "../mobilecoin/util/build/grpc" }
mc-util-build-script = { path = "../mobilecoin/util/build/script" }

cargo-emit = "0.2.1"
